Fix overflow issue in modal

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ div {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 .close-container {
@@ -130,7 +131,7 @@ div {
     flex: 1 1 0;
     text-align: center;
     padding-top: 30%;
-    font-size: 64px;
+    font-size: 50px;
 }
 
 .reset {
